# metal-cpp

./: .gitignore  CMakeLists.txt  README.md
AppKit/: AppKit.hpp  AppKitPrivate.hpp  NSApplication.hpp  NSColorSpace.hpp  NSCursor.hpp  NSEvent.hpp  NSMenu.hpp  NSMenuItem.hpp  NSOpenPanel.hpp  NSRunningApplication.hpp  NSScreen.hpp  NSView.hpp  NSWindow.hpp
Foundation/: NSPrivate.hpp  NSRunLoop.hpp
MetalKit/: MTKTextureLoader.hpp  MTKView.hpp  MetalKitPrivate.hpp
QuartzCore/: CADisplayLink.hpp  CAMetalDisplayLink.hpp  CAPrivate.hpp  QuartzCore.hpp
src/Implementation/: Implementation.cpp
tests/: CMakeLists.txt  Implementation.cpp
tests/AppKit/: InputDispatcherTests.cpp  WindowDelegateTests.cpp
tests/Foundation/: StringTests.cpp
tests/Manual/: InputDemo.cpp
tests/Metal/: DeviceTests.cpp
tests/QuartzCore/: MetalDisplayLinkTests.cpp
tests/Smoke/: UmbrellaHeadersTest.cpp
